fix: editor menu buttons on safari

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -127,7 +127,7 @@ body {
   justify-content: space-between;
 }
 
-.buttonGroup button{
+.buttonGroup button {
   width: 30px;
   height: 30px;
   margin-left: 3px;
@@ -160,4 +160,17 @@ pre {
   font-family: "JetBrainsMono", monospace;
   padding: 0.75rem 1rem;
   border-radius: 0.5rem;
+}
+
+
+@media (max-width: 768px)  {
+  .buttonGroup button{
+    width: 40px;
+    height: 40px;
+    margin-left: 2px;
+    padding: 0;
+    font-size: large;
+    color: #0d0d0d;
+  }
+  
 }
